tests/codegen/fail/interface/trait/implementers_duplicate_pretty.stderr
error: duplicated attribute argument found
 --> fail/interface/trait/implementers_duplicate_pretty.rs:9:34
  |
9 | #[graphql_interface(for = [ObjA, ObjA])]
  |                                  ^^^^

error[E0412]: cannot find type `CharacterValue` in this scope
 --> fail/interface/trait/implementers_duplicate_pretty.rs:4:18
  |
4 | #[graphql(impl = CharacterValue)]
  |                  ^^^^^^^^^^^^^^ not found in this scope

error[E0080]: evaluation of constant value failed
 --> fail/interface/trait/implementers_duplicate_pretty.rs:3:10
  |
3 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `$crate::const_concat` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> fail/interface/trait/implementers_duplicate_pretty.rs:3:10
  |
3 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `$crate::const_concat` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> fail/interface/trait/implementers_duplicate_pretty.rs:3:10
  |
3 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `$crate::const_concat` (in Nightly builds, run with -Z macro-backtrace for more info)
